Fix overflow problem in manifest info

--- a/src/main.scss
+++ b/src/main.scss
@@ -211,11 +211,13 @@ body {
   & > .fullWidth {
     align-self: stretch;
     width: unset;
+    max-width: 100%;
   }
 
   & > .fullHeight {
     flex-grow: 1;
     height: unset;
+    max-height: 100%;
   }
 }
 
